feat: finish app configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.jpa.hibernate.ddl-auto=update
 
+spring.datasource.url=jdbc:mysql://localhost:3306/solutiostockr
+spring.datasource.username=root
+spring.datasource.password=felipe12
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
