--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "package",
-  "version": "0.0.0",
+  "name": "frontend",
+  "version": "0.0.1",
+  "description": "A Quasar Project",
+  "productName": "Quasar App",
+  "author": "Felipe Holanda <felipe.nether@icloud.com>",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "test": "echo \"No test specified\" && exit 0",
+    "dev": "quasar dev",
+    "build": "quasar build"
   },
   "dependencies": {
+    "@quasar/extras": "^1.16.4",
     "axios": "^1.5.0",
-    "bootstrap": "^5.3.1",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "quasar": "^2.6.0",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.3.1",
-    "vite": "^4.4.9"
+    "@quasar/app-vite": "^1.3.0",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.14"
+  },
+  "engines": {
+    "node": "^18 || ^16 || ^14.19",
+    "npm": ">= 6.13.4",
+    "yarn": ">= 1.21.1"
   }
 }
