--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -72,6 +66,18 @@
   			<groupId>com.auth0</groupId>
   			<artifactId>java-jwt</artifactId>
   			<version>4.4.0</version>
+		</dependency>
+
+		<dependency>
+    		<groupId>com.thetransactioncompany</groupId>
+    		<artifactId>cors-filter</artifactId>
+    		<version>2.10</version>
+		</dependency>
+
+		<dependency>
+    		<groupId>javax.servlet</groupId>
+    		<artifactId>javax.servlet-api</artifactId>
+    		<version>4.0.1</version>
 		</dependency>
 
 	</dependencies>
