--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,33 +1,42 @@
-.DS_Store
-.thumbs.db
-node_modules
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# Quasar core related directories
-.quasar
+# Compiled output
 /dist
-/quasar.config.*.temporary.compiled*
+/tmp
+/out-tsc
+/bazel-out
 
-# Cordova related directories and files
-/src-cordova/node_modules
-/src-cordova/platforms
-/src-cordova/plugins
-/src-cordova/www
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
 
-# Capacitor related directories and files
-/src-capacitor/www
-/src-capacitor/node_modules
+# IDEs and editors
+.idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
 
-# Editor directories and files
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
 
-# local .env files
-.env.local*
+# System files
+.DS_Store
+Thumbs.db
